# rankedvote

./: CITATION.cff  README.md  pyproject.toml
src/rankedvote/: __init__.py  methods.py  output.py
tests/: test_methods.py
